--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -48,13 +48,37 @@
 
 html{
   font-family: "Open Sans";
-  font-size: 16px;
+  font-size: 18px;
+}
+
+span{
+  display: inline-block;
+  line-height: 1.5;
 }
 
 .section{
+  display: flex;
+  justify-content: space-between;
   max-width: 120rem;
   margin: auto;
   border: 1px hsl(0, 340%, 25%) solid;
+  background-color: hsl(0, 0%, 70%);
+}
+
+.banner{
+  margin: 2rem 1.5rem;
+  max-width: 60%;
+}
+
+.banner img{
+  max-width:100%;
+}
+
+.supporting{
+  min-width: 40%;
+  max-width: 40%;
+  margin-right: 1.5rem;
+  background-color: purple;
 }
 
 .button{
@@ -62,16 +86,21 @@ html{
   height: 3rem;
   font-family: "Roboto Slab";
   font-size: 1.2rem;
+  padding: 0.5rem;
   border: none;
   color: white;
   background-color: hsl(180, 100%, 25%);
+}
+
+.source{
+  display: block;
+  margin-top: 2rem;
 }
 
 
 /* HEADER SECTION */
 
 .header.section{
-  display: flex;
   height: 4rem;
   align-items: center;
 
@@ -121,49 +150,59 @@ html{
 /*  LEARN SECTION */
 
 .learn.section{
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: hsl(0, 0%, 70%);
 }
 
-.learn.banner{
-  margin: 2rem 1.5rem;
-  width: 60rem;
-}
-
-.learn.banner img{
-  max-width: 100%;
-}
-
-#learn-container{
-  width: 40%;
-  margin-right: 3rem;
-}
-
-.learn.content{
+.learn .content{
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 30rem;
   float: left;
-
 }
 
-.learn.content h1{
+.learn h1{
   font-size: 3.5rem;
-
+  font-weight: 700;
 }
 
-.learn.content span{
+.learn .content span{
   font-size: 1.5rem;
   margin-top: 2.5rem;
   margin-bottom: 2rem;
 }
 
-.learn.content .button{
+.learn .content .button{
   align-self: flex-end;
   margin-right: 3rem;
   width: 16rem;
   height: 3.5rem;
+}
+
+
+/* CAMPUS SECTION */
+
+.campus.section{
+  justify-content: space-between;
+}
+
+.campus .content h1{
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+
+.campus .content span{
+  width: 95%;
+}
+
+.campus .supporting{
+  display: flex;
+  flex-direction: column;
+}
+
+.campus .panel{
+  display: flex;
+  align-items: center;
 }
