--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -32,19 +32,12 @@
   src: local('Roboto Slab Bold'), local('RobotoSlab-Bold'), url(https://fonts.gstatic.com/s/robotoslab/v7/BngRUXZYTXPIvIBgJJSb6u92w7CGwR0.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
-@font-face {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Roboto Slab Light'), local('RobotoSlab-Light'), url(https://fonts.gstatic.com/s/robotoslab/v7/BngRUXZYTXPIvIBgJJSb6u9mxLCGwR0.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 
 
 
 /* CSS */
+
+/* STYLING USED THROUGHOUT THE ENTIRE WEB PAGE IS LISTED FIRST */
 
 html{
   font-family: "Open Sans";
@@ -59,7 +52,7 @@ p{
 .section{
   display: flex;
   justify-content: space-between;
-  max-width: 100%;
+  width: 100%;
   margin: auto;
   border: 1px hsl(0, 340%, 25%) solid;
   background-color: hsl(0, 0%, 70%);
@@ -96,15 +89,54 @@ p{
   background-color: hsl(180, 100%, 25%);
 }
 
+.heading{
+  width: 100%;
+  display: block;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+
 .source{
   display: block;
   margin-top: 2rem;
   font-style: italic;
 }
 
+.panel{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  margin-top: 0.1rem;
+}
+
+/*Selects the divs containing the image for each panel*/
+.panel div:first-child{
+  width: 35%;
+}
+
+.panel img{
+  width: 100%;
+  height: auto;
+  margin: 1rem;
+}
+
+.supporting .panel h3{
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+/*Selects the divs containing text in each panel*/
+.panel div:last-child{
+  margin-left: 2.5rem;
+  font-size: 1.2rem;
+  max-width: 58%;
+}
+
+
 
 /* HEADER SECTION */
-
 #header.section{
   height: 4rem;
   align-items: center;
@@ -150,10 +182,11 @@ p{
   margin-right: 0.5rem;
   color: hsl(0, 5%, 35%)
 }
+/***/
+
 
 
 /*  LEARN SECTION */
-
 #learn.section{
   justify-content: space-between;
   align-items: center;
@@ -183,94 +216,62 @@ p{
   width: 16rem;
   height: 3.5rem;
 }
+/***/
 
 
-/* CAMPUS SECTION */
 
-#campus.section{
-  justify-content: space-between;
+#campus.section,
+#thesis.section{
   background-color: white;
 }
 
-#campus .content h1{
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin: 2rem 0;
+
+
+/* CAMPUS SECTION */
+#campus.section{
+  background-color: white;
 }
 
-#campus .content p{
-  width: 100%;
-}
-
-#campus .supporting{
-  position: relative;
-  bottom: 0.1rem;
-}
-
-#campus .panel{
-  display: flex;
-  align-items: center;
-  margin-top: 0.1rem;
-}
-
-#campus .panel:nth-child(odd){
+#campus .panel:nth-child(even){
   background-color: hsl(0, 0%, 70%);
-}
-
-/*Selects the divs containing the image for each panel*/
-#campus .panel div:first-child{
-  width: 35%;
-  height: auto;
-  margin: 1rem;
-}
-
-/*Selects the divs containing text in each panel*/
-#campus .panel div:last-child{
-  margin-left: 2.5rem;
-  font-size: 1.2rem;
-}
-
-#campus .supporting .panel h3{
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
 }
 
 #campus .supporting .panel a{
   color: hsl(180, 100%, 25%);
 }
+/***/
 
 
-/* BEGIN COURSES SECTION */
 
+#courses.section .heading,
+#thesis.section .heading{
+  text-align: center;
+}
+
+
+
+/* COURSES SECTION */
 #courses.section{
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-#courses.section #heading{
-  width: 100%;
-  text-align: center;
-  font-size: 2.5rem;
-  font-weight: bold;
-  margin: 2rem 0;
-}
-
 .row{
   display: flex;
   justify-content: space-around;
-  width: 60%;
+  width: 100%;
   margin: 1rem 4.5rem;
 }
 
 .course{
-  width: 29.556rem;
+  width: 33%;
   background-color: white;
   margin: 2rem 1rem;
 }
 
 .course img{
+  width: 100%;
   height: auto;
 }
 
@@ -283,3 +284,33 @@ p{
 .course p{
   margin: 1rem 1rem;
 }
+/***/
+
+
+
+/* THESIS SECTION */
+#thesis.section{
+  flex-direction: column;
+}
+#thesis .heading{
+  width: 100%;
+  margin: 2rem 0;
+}
+
+#content-container{
+  display: flex;
+}
+
+#thesis .banner.content .heading{
+  font-size: 1.7rem;
+}
+
+#thesis .content video{
+  width: 100%;
+  height: auto;
+}
+
+#thesis .panel:nth-child(even){
+  background-color: hsl(0, 0%, 70%);
+}
+/***/
